[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-sdk"
dynamic = ["version"]
description = "A framework for writing Unstract Tools/Apps"
dependencies = [
    # Specs and validation
    "jsonschema~=4.18.2",
    "python-magic~=0.4.27",
    "python-dotenv==1.0.0",
    # LLM Triad
    "unstract-adapters~=0.8.0",
    "llama-index==0.9.28",
    "tiktoken~=0.4.0",
    "transformers==4.37.0",
]
readme = "README.md"
urls = { Homepage = "https://unstract.com", "Release notes" = "https://github.com/Zipstack/unstract-sdk/releases", Source = "https://github.com/Zipstack/unstract-sdk" }
license = {text = "AGPL v3"}
authors = [
    {name = "Zipstack Inc", email = "devsupport@zipstack.com"},
]
keywords = ["unstract tools-development-kit apps development-kit sdk"]
requires-python = ">=3.9,<3.11.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
scripts = { unstract-tool-gen = "unstract.sdk.scripts.tool_gen:main" }

[tool.pdm.dev-dependencies]
docs = [ "lazydocs~=0.4.8" ]
test = [ "parameterized==0.9.0" ]
lint = [
    "autopep8~=2.0.2",
    "black~=23.3.0",
    "docutils~=0.20.1",
    "flake8~=6.0.0",
    "flake8-pyproject~=1.2.2",
    "isort~=5.12.0",
    "pre-commit~=3.3.1",
    "yamllint>=1.35.1",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.version]
source = "file"
path = "src/unstract/sdk/__init__.py"
