[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-sdk"
dynamic = ["version"]
description = "A framework for writing Unstract Tools/Apps"
dependencies = [
    # Specs and validation
    "jsonschema~=4.18.2",
    "python-magic~=0.4.27",
    "python-dotenv==1.0.0",
    # LLM Triad
    "unstract-adapters~=0.15.0",
    "llama-index==0.10.28",
    "tiktoken~=0.4.0",
    "transformers==4.37.0",
    # Error handling, remove after moving it to adapters
    "openai~=1.21.2"
]
readme = "README.md"
urls = { Homepage = "https://unstract.com", "Release notes" = "https://github.com/Zipstack/unstract-sdk/releases", Source = "https://github.com/Zipstack/unstract-sdk" }
license = {text = "AGPL v3"}
authors = [
    {name = "Zipstack Inc", email = "devsupport@zipstack.com"},
]
keywords = ["unstract tools-development-kit apps development-kit sdk"]
requires-python = ">=3.9,<3.11.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
scripts = { unstract-tool-gen = "unstract.sdk.scripts.tool_gen:main" }

[tool.pdm.dev-dependencies]
docs = [ "lazydocs~=0.4.8" ]
test = [ "parameterized==0.9.0" ]
lint = [
    "autopep8~=2.0.2",
    "black~=23.3.0",
    "docutils~=0.20.1",
    "flake8~=6.0.0",
    "flake8-pyproject~=1.2.2",
    "isort~=5.12.0",
    "pre-commit~=3.3.1",
    "yamllint>=1.35.1",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
profile = "black"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.version]
source = "file"
path = "src/unstract/sdk/__init__.py"

# Adding the following override to resolve dependency version
# for environs. Otherwise, it stays stuck while resolving pins
[tool.pdm.resolution.overrides]
grpcio = ">=1.62.1"
