[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-sdk"
dynamic = ["version"]
description = "A framework for writing Unstract Tools/Apps"
dependencies = [
    # Specs and validation
    "jsonschema~=4.18.2",
    "python-magic~=0.4.27",
    "python-dotenv==1.0.0",
    # Adapter changes
    "llama-index==0.12.8",
    "tiktoken~=0.4.0",
    "transformers==4.37.0",
    "llama-index-embeddings-google==0.3.0",
    "llama-index-embeddings-azure-openai==0.3.0",
    # Disabling Hugging Face & FastEmbed to
    # keep the image size under check
    #        "llama-index-embeddings-huggingface==0.2.0",
    # Disabling fast embed due to high processing power
    #        "llama-index-embeddings-fastembed==0.1.4",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-embeddings-ollama==0.5.0",
    "llama-index-vector-stores-postgres==0.4.1",
    # Including Supabase conflicts with postgres on pg-vector.
    # Hence, commenting it out at the moment
    #        "llama-index-vector-stores-supabase==0.1.3",
    "llama-index-vector-stores-milvus==0.4.0",
    "llama-index-vector-stores-weaviate==1.3.1",
    "llama-index-vector-stores-pinecone==0.4.2",
    "llama-index-vector-stores-qdrant==0.4.2",
    "llama-index-llms-openai==0.3.12",
    "llama-index-llms-palm==0.3.0",
    "llama-index-llms-mistralai==0.3.1",
    "mistralai==1.2.5",
    "llama-index-llms-anyscale==0.3.0",
    "llama-index-llms-anthropic==0.6.3",
    "llama-index-llms-azure-openai==0.3.0",
    "llama-index-llms-vertex==0.4.2",
    "llama-index-llms-replicate==0.4.0",
    "llama-index-llms-ollama==0.5.0",
    "llama-index-llms-bedrock==0.3.3",
    # For Llama Parse X2Text
    "llama-parse==0.5.19",
    # OCR
    "filetype~=1.2.0",
    # Others
    # For singleton classes
    "singleton-decorator~=1.0.0",
    "httpx>=0.25.2",
    "pdfplumber>=0.11.2",
    "redis>=5.2.1",
    "llmwhisperer-client>=2.1.0",
]
readme = "README.md"
urls = { Homepage = "https://unstract.com", "Release notes" = "https://github.com/Zipstack/unstract-sdk/releases", Source = "https://github.com/Zipstack/unstract-sdk" }
license = {text = "AGPL v3"}
authors = [
    {name = "Zipstack Inc", email = "devsupport@zipstack.com"},
]
keywords = ["unstract tools-development-kit apps development-kit sdk"]
requires-python = ">=3.9,<3.11.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
scripts = { unstract-tool-gen = "unstract.sdk.scripts.tool_gen:main" }

[tool.pdm.dev-dependencies]
docs = [ "lazydocs~=0.4.8" ]
test = [
    "parameterized==0.9.0",
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "gcsfs==2024.10.0",
    "s3fs==2024.10.0"
]
lint = [
    "autopep8~=2.0.2",
    "black~=23.3.0",
    "docutils~=0.20.1",
    "flake8~=6.0.0",
    "flake8-pyproject~=1.2.2",
    "isort~=5.12.0",
    "pre-commit~=3.3.1",
    "yamllint>=1.35.1",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
profile = "black"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.version]
source = "file"
path = "src/unstract/sdk/__init__.py"

# Adding the following override to resolve dependency version
# for environs. Otherwise, it stays stuck while resolving pins
[tool.pdm.resolution.overrides]
grpcio = "1.62.3"
grpcio-tools = "1.62.3"
grpcio-health-checking = "1.62.3"
